--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!-- <link rel="stylesheet" href="path/to/materialize.css"> -->
+
+    <link
+      rel="stylesheet"
+      href="../node_modules/materialize-css/dist/css/materialize.css"
+    />
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/bdd89edb33.js"></script>
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +61,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="path/to/your/bundle.js"></script> -->
+
+    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
+
+    <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
   </body>
 </html>
